ch5-button-list/scss/_button-list-default.scss
///////////////////////////////////////////////////////////////////////////////////////////////////
/// Copyright (C) 2022 to the present, Crestron Electronics, Inc.
/// All rights reserved.
/// No part of this software may be reproduced in any form, machine
/// or natural, without the express written consent of Crestron Electronics.
/// Use of this source code is subject to the terms of the Crestron Software License Agreement
/// under which you licensed this source code.
///
/// @author Crestron
/// @group ch5-button-list
////////////////////////////////////////////////////////////////////////////////////////////////////

/// Main class
.ch5-button-list {
  position: relative;
  overflow: scroll;
  white-space: nowrap;
  transition: all 0.2s;
  will-change: transform;
  user-select: none;
  display: grid;
  height: auto;

  &.active {
    cursor: -webkit-grabbing;
  }

  &.ch5-button-list::-webkit-scrollbar {
    height: 0px;
    width: 0px;
  }

  &.ch5-button-list--center-items-true {
    justify-content: center;
    align-content: center;
  }

  &.ch5-button-list--center-items-false {
    align-content: start;
    justify-content: start;
  }

  &.ch5-button-list--stretch-both {
    align-content: stretch;
    justify-content: stretch;
  }

  &~.scrollbar-container {
    position: absolute;
    background-color: $ch5-scrollbar-track-color;
    border-radius: $ch5-scrollbar-border-radius;

    .scrollbar {
      position: absolute;
      will-change: width, transform;
      position: absolute;
      border-radius: $ch5-scrollbar-border-radius;
      background: $ch5-scrollbar-thumb-color;
    }
  }

  &.ch5-button-list--scrollbar-true {
    &~.scrollbar-container {
      display: block;
    }
  }

  &.ch5-button-list--scrollbar-false {
    &~.scrollbar-container {
      display: none;
    }
  }
}

ch5-button-list {
  position: relative;
  display: grid;
}

.ch5-button-list--disabled {
  pointer-events: none;
  opacity: $ch5-button-list-disabled-opacity;
}

.ch5-button-list.ch5-button-list--disabled {
  &~.scrollbar-container {
    pointer-events: none;
    opacity: $ch5-button-list-disabled-opacity;
  }
}

.ch5-button-list--button-container {
  width: $ch5-button-list-button-container-width;
  height: $ch5-button-list-button-container-height;
  padding: $ch5-button-list-button-container-padding;
  min-width: $ch5-button-list-button-container-width;
  min-height: $ch5-button-list-button-container-height;
}

